# all-trees-tracker

./: .editorconfig  .gitmodules  .markdownlint.jsonc  CHANGELOG.md  README.md
.github/workflows/: build.yml  megaton.yml  sveltekit.yml  tauri.yml
backend/: Megaton.toml  README.md
backend/src/: main.cpp  sdk.cpp  sdk.hpp  tcp.cpp  tcp.hpp  utility.hpp
frontend/: .gitattributes  .gitignore  README.md  biome.json  biome.jsonc  deno.jsonc  package.json  svelte.config.js  tsconfig.json  turbo.jsonc  vite.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  Tauri.toml  build.rs  rustfmt.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: client.rs  lib.rs  main.rs
frontend/src/lib/: Progress.svelte  Setting.svelte  SettingEntry.svelte  Settings.svelte  TabbedPanel.svelte  TreeMap.svelte  client.svelte.ts  config.svelte.ts  icons.svelte.ts  settings.svelte.ts  translations.svelte.ts  trees.svelte.ts  trees_hyrule.json  trees_tots.json  types.svelte.ts
frontend/src/lib/progress/: BarChart.svelte  LineChart.svelte  PieChart.svelte  ProgressBar.svelte  ProgressBarFilter.svelte  progress.svelte.ts
frontend/src/lib/translations/: translations.svelte.ts
frontend/src/lib/translations/en-US/: common.json  error.json  progress.json  region.json  setting.json  tab.json  tree.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  global.css
frontend/static/: site.webmanifest
icon/: .gitignore  README.md  biome.jsonc  deno.jsonc  leaves.ts  package.json  tree.ts  trunk.ts  turbo.jsonc
proxy/: Cargo.toml  README.md
proxy/src/: main.rs
