[package]
name = "all-trees-tracker-proxy"
description = "WebSocket proxy for All Trees Tracker"
authors = ["Mako"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Makonede/all-trees-tracker"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "unicode", "unstable-v5", "wrap_help"] }
clap-i18n-richformatter = "0.3.0"
futures = { version = "0.3.31", features = ["unstable"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
