cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "all-trees-tracker"
description = "A tracker mod for the Breath of the Wild All Trees challenge run"
authors = ["Mako"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Makonede/all-trees-tracker"
license = "GPL-3.0-or-later"

[lib]
name = "all_trees_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46.1", features = ["full"] }

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
